2014-01-05  Steve  <sjh@kanga.hindmarch.home>

	* ChangeLog
	- project change log created - better late than never eh?
